# CertyLex

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  license  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/api/: route.ts
app/api/chat/: route.ts
app/api/chat/ollama/: route.ts
app/api/chat/ollama/models/: route.ts
app/api/entities/extract/: route.ts
app/api/image/enhance/: route.ts
app/api/imagecnn/enhance/: route.ts
app/api/pdf/analyze/: route.ts
app/api/pdf/extract/: route.ts
app/imagen-cnn/: page.tsx
app/imagen-enhancer/: page.tsx
app/pdf-analysis/: page-fixed.tsx  page.tsx
backend/api/: __init__.py  main.py  middleware.py  router.py
backend/api/data/: boe.py
backend/api/routers/: __init__.py
backend/api/routers/auth/: __init__.py  route.py
backend/api/routers/boe/: __init__.py  route.py
backend/api/routers/boe/parser/: __init__.py
backend/api/routers/boe/sumario/: __init__.py  route.py
backend/api/routers/entities/: __init__.py  route.py
backend/api/routers/image/: route.py
backend/api/routers/imagecnn/: __init__.py  route.py
backend/api/routers/nlp_entities/: __init__.py  route.py
backend/data/api/: boe.py
backend/lib/api/: __init__.py
backend/lib/api/boe/: __init__.py  boe.py  diario.py  parser.py  pso.py  sumario.py
backend/lib/api/metaheuristics/: ant_colony.py  bm25.py  genetic_algorithm.py  lsi.py  simulated_annealing.py
backend/lib/image/: __init__.py  cnn_metaheuristic.py  llm_pipeline.py  pipeline.py
backend/lib/language/: __init__.py  preprocessing.py  regex.py  text_normalizer.py
backend/lib/language/types/: __init__.py  regex.py
backend/lib/math/: __init__.py  calculus.py
backend/lib/pdf/: extract_data.py  extract_img.py
backend/samples/notebooks/: BOE.ipynb  NLP.ipynb  image_pipeline_llm_optimization.ipynb  img_llm_pipeline.py  img_pipeline.ipynb  pipeline_llm_optimization.ipynb
backend/tests/: conftest.py
backend/tests/language/: test_regex.py
backend/tests/pdf/: contrato_pdf.py
certylex-agent/: package.json
components/: chat-demo.tsx  pdf-chat-fixed.tsx  pdf-chat.tsx
components/ui/: chat-message.tsx  chat.tsx  copy-button.tsx  hyperparameter-form.tsx  markdown-renderer.tsx  message-input.tsx  message-list.tsx  model-selector.tsx  prompt-suggestions.tsx  slider.tsx
docs/: APP_API.md  AWS_Pipeline_Architecture.md  Architecture.md  BOE_Metaheuristics.md  Hardware.md  Metaheuristic.md  Modelfile.md  NextJs.md  Pipeline.md  Poetry.md  Presentation_KeyPoints.md  ideas.txt
docs/NLP/: Corpus.md  Normalizer.md  XML.md
docs/NLP/regex/: NIF.md  NIF_EMPRESA.md
docs/api/: CORS_middleware.md
docs/models/: Quantization.md
docs/notebooks/: NLP.ipynb  img_pipeline.ipynb
docs/paper/: CertLex.aux  CertLex.bbl  CertLex.fdb_latexmk  CertLex.fls  CertLex.tex  references.bib
docs/ppt/: flowchgart.md  flowchgart.mmd
hooks/: use-auto-scroll.ts  use-copy-to-clipboard.ts
models/pytorch/: pyproject.toml
models/tensorflow/: README.md  Readme.md  pyproject.toml
models/tensorflow/tensorflow_models/: test.ipynb  test.py
models/tensorflow/tensorflow_models/config/: cuda.ipynb  tensorflow.ipynb
models/torch/: README.md  compare_model_outputs.ipynb  dataset_constructor.py  pyproject.toml
models/torch/config/: cuda.ipynb  torch.ipynb
models/torch/torch_models/: BOETextGenerator.md  BOETextGenerator.py  BOETextSummarizer.py  BOE_deepseek_r1_8b.py  BoeTextSummarizer.py  __init__.py  test.py
prisma/: schema.prisma
src/: modelfile.ts
