[tool.poetry]
name = "certylex_api"
version = "0.1.0"
description = "This project is designed to implement neural networks and LLMs to analyze legal documents."
authors = ["0xGeN02 <manuelmateodgl02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
requests = "^2.32.3"
pydantic-core = "^2.32.0"
python-stdnum = "^1.20"
transformers = "^4.51.1"
torch = "^2.6.0"
ipywidgets = "^8.1.5"
spacy = "^3.8.5"
pypdf2 = "^3.0.1"
pymupdf = "^1.25.5"
notebook = "^7.4.0"
opencv-python = "^4.11.0.86"
pytesseract = "^0.3.13"
eth-hash = {extras = ["pycryptodome"], version = "^0.7.1"}
ollama = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["backend/lib"]
testpaths = ["backend/tests"]
addopts = "--disable-warnings"