[project]
name = "torch_models"
version = "0.1.0"
description = "Env used to develop the models with pytorch@2.6 + python@3.13.2"
authors = [
    {name = "0xGeN02",email = "manuelmateodgl02@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "nvidia-nccl-cu12 (==2.21.5)",
    "torch (==2.6)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "torch_models" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
